# artellapipe-tools-welcome

./: .buildinfo  .travis.yml  MANIFEST.in  README.md  README.rst  artellapipe.html  artellapipe.tools.html  artellapipe.tools.welcome.html  artellapipe.tools.welcome.welcome.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
_sources/: artellapipe.tools.rst.txt  artellapipe.tools.welcome.rst.txt  artellapipe.tools.welcome.welcome.rst.txt  index.rst.txt
artellapipe/tools/welcome/: __init__.py  __version__.py  welcome.py
artellapipe/tools/welcome/core/: consts.py  tool.py  toolset.py  view.py
artellapipe/tools/welcome/widgets/: final.py  frame.py  shortcuts.py  widget.py
docs/sphinx/: conf.py  index.rst
source/artellapipe/tools/welcome/: __init__.py  __logging__.ini  welcome.py
tests/: test_welcome.py
